# substrate-scanning-engine

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  QA_CHECKLIST_TEMPLATE.md  README.md  TODO.md  pyproject.toml  requirements.txt  verify.sh
.github/workflows/: ci.yml
THIRD-PARTY-LICENSES/: README.md
applications/: ast_engine.py  cavity_engine.py  colorimetry_engine.py  crypto_curve_engine.py  graph_engine.py  image_spectral_engine.py  motor_diagnosis.py  pathfinding_engine.py  phonon_engine.py  sparam_engine.py  turbulence_engine.py  wavelet_3d_engine.py
applications/doc/: README_ast_engine.md  README_cavity_engine.md  README_colorimetry_engine.md  README_crypto_curve_engine.md  README_graph_engine.md  README_image_spectral_engine.md  README_motor_diagnosis.md  README_pathfinding_engine.md  (+4 more)
data/: envelope_results.json
methodology/: curva_aprendizaje_serie_I.md  dual_test_dashboard.jsx  preguntas_abiertas.jsx
papers/: class_number_report.docx  dual_role_f_v3.docx  quick_start.tex  substrate_scanning_engine.docx  substrate_scanning_engine.tex  two_windows.docx
pipelines/: cf_features.py  envelope_pipeline.py  envelope_v2.py  geometric_engine.py  zero_locator.py
visualizations/: cayley_spectra.html  cf_features.html  geodesicas.html  lambda_surface.html  paisaje_zeta.html  poincare_ball.html  toro_23.html  toro_25.html  toro_critico.html  toro_mixto.html  toros_4_modes.html  toros_combined.html  toros_zeros.html  tres_operadores.html  zero_locator.html  zeros_action.html  zeros_action_v2.html  zeros_r3.html  zeros_r3_v2.html
(+5 files in other folders)
